# alde

./: README.md  cmdline
alde-commons/src/alde/commons/: ALDEDefaults.java
cxx/: CMakeLists.txt
cxx/src/commons/: ConsoleSize.cpp  ExceptionHandle.cpp  UserIO.cpp
framework/src/alde/framework/: ALDEException.java  ALDEFramework.java  ALDEPartition.java  ALDESystem.java
framework/src/alde/framework/android/: AndroidPackage.java  AndroidUser.java
net.bc100dev-commons/src/net/bc100dev/commons/: NativeLibrary.java
src/net/bc100dev/alde/: MainClass.java
